complete through chapter 7

--- a/WorldTrotter/Base.lproj/Main.storyboard
+++ b/WorldTrotter/Base.lproj/Main.storyboard
@@ -18,25 +18,25 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="degrees Fahrenheit" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bmk-wb-q5y">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="degrees Fahrenheit" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bmk-wb-q5y">
                                 <rect key="frame" x="39.5" y="120" width="295.5" height="43"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="36"/>
                                 <color key="textColor" red="0.88235294117647056" green="0.34509803921568627" blue="0.16078431372549018" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="is really" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sMN-Ah-6qd">
-                                <rect key="frame" x="130" y="171" width="114" height="43"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="is really" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sMN-Ah-6qd">
+                                <rect key="frame" x="131" y="171" width="114" height="43"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="36"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eYq-JU-HwK">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eYq-JU-HwK">
                                 <rect key="frame" x="129" y="222" width="116.5" height="84"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="70"/>
                                 <color key="textColor" red="0.88235294117647056" green="0.34509803921568627" blue="0.16078431372549018" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="degrees Celsius" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iYT-gJ-Xgh">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="degrees Celsius" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iYT-gJ-Xgh">
                                 <rect key="frame" x="64.5" y="314" width="245.5" height="43"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="36"/>
                                 <color key="textColor" red="0.88235294117647056" green="0.34509803921568627" blue="0.16078431372549018" alpha="1" colorSpace="calibratedRGB"/>
@@ -59,16 +59,26 @@
                         <color key="backgroundColor" red="0.96078431372549022" green="0.95686274509803915" blue="0.94509803921568625" alpha="1" colorSpace="calibratedRGB"/>
                         <gestureRecognizers/>
                         <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="eYq-JU-HwK" secondAttribute="trailing" id="2kM-od-Dhq"/>
                             <constraint firstItem="eYq-JU-HwK" firstAttribute="top" secondItem="sMN-Ah-6qd" secondAttribute="bottom" constant="8" id="3E9-tC-qon"/>
                             <constraint firstItem="iYT-gJ-Xgh" firstAttribute="top" secondItem="eYq-JU-HwK" secondAttribute="bottom" constant="8" id="6RP-NA-Hdl"/>
                             <constraint firstItem="sMN-Ah-6qd" firstAttribute="centerX" secondItem="bmk-wb-q5y" secondAttribute="centerX" id="6mu-l1-hLc"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="sMN-Ah-6qd" secondAttribute="trailing" id="7q7-FG-SmH"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="0gC-IJ-ovK" secondAttribute="trailing" id="B5k-b8-C0v"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="bmk-wb-q5y" secondAttribute="trailing" id="HgI-Qp-C9J"/>
                             <constraint firstItem="eYq-JU-HwK" firstAttribute="centerX" secondItem="bmk-wb-q5y" secondAttribute="centerX" id="IRO-LI-MbI"/>
                             <constraint firstItem="iYT-gJ-Xgh" firstAttribute="centerX" secondItem="bmk-wb-q5y" secondAttribute="centerX" id="J6T-yu-eyI"/>
                             <constraint firstItem="0gC-IJ-ovK" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="8" id="Q4k-e7-JeM"/>
+                            <constraint firstItem="sMN-Ah-6qd" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="VVH-1X-4BJ"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="iYT-gJ-Xgh" secondAttribute="trailing" id="VVX-Pz-V5O"/>
+                            <constraint firstItem="eYq-JU-HwK" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="eRG-B3-I2G"/>
                             <constraint firstItem="sMN-Ah-6qd" firstAttribute="top" secondItem="bmk-wb-q5y" secondAttribute="bottom" constant="8" id="ebf-QS-k7o"/>
+                            <constraint firstItem="iYT-gJ-Xgh" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="nA1-87-oVZ"/>
                             <constraint firstItem="0gC-IJ-ovK" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="pTX-g3-i35"/>
                             <constraint firstItem="bmk-wb-q5y" firstAttribute="centerX" secondItem="0gC-IJ-ovK" secondAttribute="centerX" id="sRF-KR-qEw"/>
                             <constraint firstItem="bmk-wb-q5y" firstAttribute="top" secondItem="0gC-IJ-ovK" secondAttribute="bottom" constant="8" id="upe-PG-QPH"/>
+                            <constraint firstItem="bmk-wb-q5y" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="x4o-JA-cia"/>
+                            <constraint firstItem="0gC-IJ-ovK" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="xeA-6J-7xx"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <connections>
@@ -106,6 +116,7 @@
                 <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="gJ6-1A-bsm" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="oba-3n-Lf4">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
